Add directive to add labled elements
Will automatically link the 'for' attribute to the first input element

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,6 +21,9 @@
 
   <link rel="stylesheet" href="app/styles/dashboard.css">
 
+  <script type="text/javascript" src="app/scripts/directive/labelGroup.js"></script>
+
+
 </head>
 <body ng-controller="MainCtrl">
 
