--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,12 +17,18 @@
 
   <script type="text/javascript" src="components/angular/angular.js"></script>
   <script type="text/javascript" src="components/angular-resource/angular-resource.js"></script>
+  <script type="text/javascript" src="components/angular-route/angular-route.js"></script>
   <script type="text/javascript" src="app/scripts/app.js"></script>
+  <script type="text/javascript" src="app/scripts/routes.js"></script>
 
   <link rel="stylesheet" href="app/styles/dashboard.css">
 
   <script type="text/javascript" src="app/scripts/directive/labelGroup.js"></script>
 
+  <script type="text/javascript" src="app/module/home/controller/HomeController.js"></script>
+  <script type="text/javascript" src="app/module/employee/factory/EmployeeFactory.js"></script>
+  <script type="text/javascript" src="app/module/employee/controller/EmployeeListController.js"></script>
+  <script type="text/javascript" src="app/module/employee/controller/EmployeeDetailController.js"></script>
 
 </head>
 <body ng-controller="MainCtrl">
@@ -42,10 +48,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Help</a></li>
+            <li><a href="#/">Home</a></li>
           </ul>
           <form class="navbar-form navbar-right">
             <input type="text" class="form-control" placeholder="Search..." ng-model="search">
@@ -58,34 +61,15 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="#"><i class="fa fa-users"></i> Employees <span class="sr-only">(current)</span></a></li>
-            <li><a href="#"><i class="fa fa-calendar"></i> Calendar</a></li>
+            <li class="active"><a href="#/employees"><i class="fa fa-users"></i> Employees <span class="sr-only">(current)</span></a></li>
+            <li><a href="#/calendar"><i class="fa fa-calendar"></i> Calendar</a></li>
           </ul>
           <ul class="nav nav-sidebar">
             <li><a href=""><i class="fa fa-line-chart"></i> Capacity</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" id="page-wrapper" ng-view>
-          <h1 class="page-header">Employees</h1>  
-
-          <h2 class="sub-header">Listing</h2>
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>E-Mail</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr ng-repeat="employee in employees | filter:search">
-                <td>{{employee.id}}</td>
-                <td>{{employee.name}}</td>
-                <td>{{employee.email}}</td>
-              </tr>
-            </tbody>
-          </table>
-          <button><i class="fa fa-plus-circle"></i> Add</button>
+          
         </div>
       </div>
     </div>
