Add initial support for fullcalendar
As nice as it might be, it seems hard to get to work

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,8 +27,18 @@
   <link rel="stylesheet" type="text/css" href="app/styles/dashboard.css">
   <link rel="stylesheet" type="text/css" href="app/styles/taginput.css">
   <link rel="stylesheet" type="text/css" href="app/module/employee/styles/employee.css">
+  <link rel="stylesheet" type="text/css" href="app/module/calendar/styles/calendar.css">
 
   <script type="text/javascript" src="app/scripts/directive/labelGroup.js"></script>
+
+  <!-- angular-calendar -->
+  <link rel="stylesheet" href="components/fullcalendar/dist/fullcalendar.css"/>
+  <!-- jquery, moment, and angular have to get included before fullcalendar -->
+  <script type="text/javascript" src="components/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="components/moment/min/moment.min.js"></script>
+  <script type="text/javascript" src="components/angular-ui-calendar/src/calendar.js"></script>
+  <script type="text/javascript" src="components/fullcalendar/dist/fullcalendar.min.js"></script>
+  <script type="text/javascript" src="components/fullcalendar/dist/gcal.js"></script>
 
   <script type="text/javascript" src="app/module/home/controller/HomeController.js"></script>
   <script type="text/javascript" src="app/module/calendar/controller/CalendarController.js"></script>
