Move searching to the root scope

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -68,7 +68,7 @@
             <li><a href="#/">Home</a></li>
           </ul>
           <form class="navbar-form navbar-right">
-            <input type="text" class="form-control" placeholder="Search..." ng-model="search">
+            <input type="text" class="form-control" placeholder="Search..." ng-model="$root.search" />
           </form>
         </div>
       </div>
