Add highcharts experiments

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -47,6 +47,9 @@
   <script type="text/javascript" src="app/module/employee/controller/EmployeeDetailController.js"></script>
   <script type="text/javascript" src="app/module/capacity/controller/CapacityController.js"></script>
 
+  <script type="text/javascript" src="components/highcharts/highcharts.js"></script>
+  <script type="text/javascript" src="components/highcharts-ng/dist/highcharts-ng.js"></script>
+
 </head>
 <body ng-controller="MainCtrl">
 
