--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -50,6 +50,8 @@
   <script type="text/javascript" src="components/highcharts/highcharts.js"></script>
   <script type="text/javascript" src="components/highcharts-ng/dist/highcharts-ng.js"></script>
 
+  <link rel="stylesheet" href="components/angular-bootstrap-colorpicker/css/colorpicker.css"/>
+  <script type="text/javascript" src="components/angular-bootstrap-colorpicker/js/bootstrap-colorpicker-module.js"></script>
 </head>
 <body ng-controller="MainCtrl">
 
