--- a/src/main/webapp/app/scripts/directive/labelGroup.html
+++ b/src/main/webapp/app/scripts/directive/labelGroup.html
@@ -1,4 +1,4 @@
-<div class="label-group">
-	<label class="col-sm-2 label-group-label" for="{{forControl}}" ng-bind="label"></label>
+<div class="form-group">
+	<label class="col-sm-2 control-label" for="{{forControl}}" ng-bind="label"></label>
 	<div class="col-sm-10 label-group-content" ng-transclude></div>
 </div>
