--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -46,6 +46,7 @@
   <script type="text/javascript" src="app/module/employee/controller/EmployeeListController.js"></script>
   <script type="text/javascript" src="app/module/employee/controller/EmployeeDetailController.js"></script>
   <script type="text/javascript" src="app/module/capacity/controller/CapacityController.js"></script>
+  <script type="text/javascript" src="app/module/absence/controller/AbsenceController.js"></script>
 
   <script type="text/javascript" src="components/highcharts/highcharts.js"></script>
   <script type="text/javascript" src="components/highcharts-ng/dist/highcharts-ng.js"></script>
@@ -88,6 +89,7 @@
           </ul>
           <ul class="nav nav-sidebar">
             <li ng-class="{active : currentModule() == 'capacity'}"><a href="#/capacity"><i class="fa fa-line-chart"></i> Capacity</a></li>
+            <li ng-class="{active : currentModule() == 'absence'}"><a href="#/absence"><i class="fa fa-pie-chart"></i> Absence</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" id="page-wrapper" ng-view>
