Initial support for setting working hours per day

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,6 +30,7 @@
   <link rel="stylesheet" type="text/css" href="app/module/calendar/styles/calendar.css">
 
   <script type="text/javascript" src="app/scripts/directive/labelGroup.js"></script>
+  <script type="text/javascript" src="app/scripts/filter/dayOfWeekToString.js"></script>
 
   <!-- angular-calendar -->
   <link rel="stylesheet" href="components/fullcalendar/dist/fullcalendar.css"/>
