Allow the administrator to add and remove working hour days

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -54,6 +54,8 @@
 
   <link rel="stylesheet" href="components/angular-bootstrap-colorpicker/css/colorpicker.css"/>
   <script type="text/javascript" src="components/angular-bootstrap-colorpicker/js/bootstrap-colorpicker-module.js"></script>
+
+  <script type="text/javascript" src="components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 </head>
 <body ng-controller="MainCtrl">
 
