Generalize concept of service, selector and dao for '' usage

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -56,6 +56,10 @@
   <script type="text/javascript" src="components/angular-bootstrap-colorpicker/js/bootstrap-colorpicker-module.js"></script>
 
   <script type="text/javascript" src="components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+
+  <link rel="stylesheet" href="components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.min.css"/>
+  <script type="text/javascript" src="components/seiyria-bootstrap-slider/dist/bootstrap-slider.min.js"></script>
+  <script type="text/javascript" src="components/angular-bootstrap-slider/slider.js"></script>
 </head>
 <body ng-controller="MainCtrl">
 
@@ -96,7 +100,6 @@
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" id="page-wrapper" ng-view>
-
         </div>
       </div>
     </div>
