--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,6 +28,7 @@
   <link rel="stylesheet" type="text/css" href="app/styles/taginput.css">
   <link rel="stylesheet" type="text/css" href="app/module/employee/styles/employee.css">
   <link rel="stylesheet" type="text/css" href="app/module/calendar/styles/calendar.css">
+  <link rel="stylesheet" type="text/css" href="app/module/episode/styles/episode.css">
 
   <script type="text/javascript" src="app/scripts/directive/labelGroup.js"></script>
   <script type="text/javascript" src="app/scripts/filter/dayOfWeekToString.js"></script>
