Implement selecting a date using the datepicker

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -64,6 +64,8 @@
   <link rel="stylesheet" href="components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.min.css"/>
   <script type="text/javascript" src="components/seiyria-bootstrap-slider/dist/bootstrap-slider.min.js"></script>
   <script type="text/javascript" src="components/angular-bootstrap-slider/slider.js"></script>
+
+  <link rel="stylesheet" href="app/styles/global.css"/>
 </head>
 <body ng-controller="MainCtrl">
 
