--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -52,6 +52,9 @@
   <script type="text/javascript" src="app/module/episode/factory/EpisodeFactory.js"></script>
   <script type="text/javascript" src="app/module/episode/controller/EpisodeListController.js"></script>
   <script type="text/javascript" src="app/module/episode/controller/EpisodeDetailController.js"></script>
+  <script type="text/javascript" src="app/module/ical_import/controller/IcalImportListController.js"></script>
+  <script type="text/javascript" src="app/module/ical_import/controller/IcalImportDetailController.js"></script>
+  <script type="text/javascript" src="app/module/ical_import/factory/IcalImportFactory.js"></script>
 
   <script type="text/javascript" src="components/highcharts/highcharts.js"></script>
   <script type="text/javascript" src="components/highcharts-ng/dist/highcharts-ng.js"></script>
@@ -100,6 +103,7 @@
             <li ng-class="{active : currentModule() == 'employees'}"><a href="#/employees"><i class="fa fa-users"></i> Employees <span class="sr-only">(current)</span></a></li>
             <li ng-class="{active : currentModule() == 'episodes'}"><a href="#/episodes"><i class="fa fa-caret-square-o-right"></i> Episodes</a></li>
             <li ng-class="{active : currentModule() == 'calendar'}"><a href="#/calendar"><i class="fa fa-calendar"></i> Calendar</a></li>
+            <li ng-class="{active : currentModule() == 'ical_imports'}"><a href="#/ical_imports"><i class="fa fa-calendar-plus-o"></i> iCal Imports</a></li>
           </ul>
           <ul class="nav nav-sidebar">
             <li ng-class="{active : currentModule() == 'capacity'}"><a href="#/capacity"><i class="fa fa-line-chart"></i> Capacity</a></li>
