Add directive for employee names

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,6 +31,7 @@
   <link rel="stylesheet" type="text/css" href="app/module/episode/styles/episode.css">
 
   <script type="text/javascript" src="app/scripts/directive/labelGroup.js"></script>
+  <script type="text/javascript" src="app/scripts/directive/employeeName.js"></script>
   <script type="text/javascript" src="app/scripts/filter/dayOfWeekToString.js"></script>
 
   <!-- angular-calendar -->
