--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,44 +5,59 @@
   <meta charset="utf8" />
   <title>Capacity planning tools</title>
 
-  <!-- Load jQuery -->
-  <script type="text/javascript" src="components/jquery/dist/jquery.min.js"></script>
+  <!-- jQuery -->
+  <script type="text/javascript" src="webjars/jquery/1.12.0/dist/jquery.min.js"></script>
+  <!-- bootstrap -->
+  <script type="text/javascript" src="webjars/bootstrap/3.3.6/dist/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="webjars/bootstrap/3.3.6/dist/css/bootstrap.min.css">
+  <!-- font-awesome -->
+  <link rel="stylesheet" type="text/css" href="webjars/font-awesome/4.5.0/css/font-awesome.min.css">
+  <!-- Angular -->
+  <script type="text/javascript" src="webjars/angular/1.4.8/angular.js"></script>
+  <script type="text/javascript" src="webjars/angular-resource/1.4.8/angular-resource.js"></script>
+  <script type="text/javascript" src="webjars/angular-route/1.4.8/angular-route.js"></script>
+  <!-- Angular tags input -->
+  <script type="text/javascript" src="webjars/ng-tags-input/2.3.0/ng-tags-input.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="webjars/ng-tags-input/2.3.0/ng-tags-input.min.css">
+  <!-- Shiro -->
+  <script type="text/javascript" src="webjars/angular-shiro/0.1.3/dist/angular-shiro.min.js"></script>
+  <!-- angular-calendar -->
+  <link rel="stylesheet" href="webjars/fullcalendar/2.3.1/dist/fullcalendar.css"/>
+  <script type="text/javascript" src="webjars/moment/2.11.1/min/moment.min.js"></script>
+  <script type="text/javascript" src="webjars/angular-ui-calendar/1.0.1/src/calendar.js"></script>
+  <script type="text/javascript" src="webjars/fullcalendar/2.3.1/dist/fullcalendar.min.js"></script>
+  <script type="text/javascript" src="webjars/fullcalendar/2.3.1/dist/gcal.js"></script>
+  <!-- Highcharts -->
+  <script type="text/javascript" src="webjars/highcharts/4.2.1/highcharts.js"></script>
+  <script type="text/javascript" src="webjars/highcharts-ng/0.0.11/dist/highcharts-ng.js"></script>
+  <!-- Bootstrap colorpicker -->
+  <link rel="stylesheet" href="webjars/angular-bootstrap-colorpicker/3.0.11/css/colorpicker.css"/>
+  <script type="text/javascript" src="webjars/angular-bootstrap-colorpicker/3.0.11/js/bootstrap-colorpicker-module.js"></script>
+  <!-- Bootstrap UI -->
+  <script type="text/javascript" src="webjars/angular-ui-bootstrap-bower/0.14.3/ui-bootstrap-tpls.min.js"></script>
+  <!-- Angular slider -->
+  <link rel="stylesheet" href="webjars/seiyria-bootstrap-slider/5.2.6/dist/css/bootstrap-slider.min.css"/>
+  <script type="text/javascript" src="webjars/seiyria-bootstrap-slider/5.2.6/dist/bootstrap-slider.min.js"></script>
+  <script type="text/javascript" src="webjars/angular-bootstrap-slider/0.1.24/slider.js"></script>
 
-  <!-- Load bootstrap -->
-  <script type="text/javascript" src="components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="components/bootstrap/dist/css/bootstrap.css">
-
-  <!-- Load font-awesome -->
-  <link rel="stylesheet" type="text/css" href="components/font-awesome/css/font-awesome.min.css">
-
-  <script type="text/javascript" src="components/angular/angular.js"></script>
-  <script type="text/javascript" src="components/angular-resource/angular-resource.js"></script>
-  <script type="text/javascript" src="components/angular-route/angular-route.js"></script>
-  <script type="text/javascript" src="components/ng-tags-input/ng-tags-input.js"></script>
-  <link rel="stylesheet" type="text/css" href="components/ng-tags-input/ng-tags-input.css">
-
+  <!-- App basics -->
   <script type="text/javascript" src="app/scripts/app.js"></script>
   <script type="text/javascript" src="app/scripts/routes.js"></script>
 
+  <!-- Styles -->
+  <link rel="stylesheet" type="text/css" href="app/styles/global.css"/>
   <link rel="stylesheet" type="text/css" href="app/styles/dashboard.css">
   <link rel="stylesheet" type="text/css" href="app/styles/taginput.css">
   <link rel="stylesheet" type="text/css" href="app/module/employee/styles/employee.css">
   <link rel="stylesheet" type="text/css" href="app/module/calendar/styles/calendar.css">
   <link rel="stylesheet" type="text/css" href="app/module/episode/styles/episode.css">
 
+  <!-- Directives and factories -->
   <script type="text/javascript" src="app/scripts/directive/labelGroup.js"></script>
   <script type="text/javascript" src="app/scripts/directive/employeeName.js"></script>
   <script type="text/javascript" src="app/scripts/filter/dayOfWeekToString.js"></script>
 
-  <!-- angular-calendar -->
-  <link rel="stylesheet" href="components/fullcalendar/dist/fullcalendar.css"/>
-  <!-- jquery, moment, and angular have to get included before fullcalendar -->
-  <script type="text/javascript" src="components/jquery/dist/jquery.min.js"></script>
-  <script type="text/javascript" src="components/moment/min/moment.min.js"></script>
-  <script type="text/javascript" src="components/angular-ui-calendar/src/calendar.js"></script>
-  <script type="text/javascript" src="components/fullcalendar/dist/fullcalendar.min.js"></script>
-  <script type="text/javascript" src="components/fullcalendar/dist/gcal.js"></script>
-
+  <!-- Modules -->
   <script type="text/javascript" src="app/module/home/controller/HomeController.js"></script>
   <script type="text/javascript" src="app/module/calendar/controller/CalendarController.js"></script>
   <script type="text/javascript" src="app/module/employee/factory/EmployeeFactory.js"></script>
@@ -56,20 +71,8 @@
   <script type="text/javascript" src="app/module/ical_import/controller/IcalImportListController.js"></script>
   <script type="text/javascript" src="app/module/ical_import/controller/IcalImportDetailController.js"></script>
   <script type="text/javascript" src="app/module/ical_import/factory/IcalImportFactory.js"></script>
+  <script type="text/javascript" src="app/module/login/controller/LoginController.js"></script>
 
-  <script type="text/javascript" src="components/highcharts/highcharts.js"></script>
-  <script type="text/javascript" src="components/highcharts-ng/dist/highcharts-ng.js"></script>
-
-  <link rel="stylesheet" href="components/angular-bootstrap-colorpicker/css/colorpicker.css"/>
-  <script type="text/javascript" src="components/angular-bootstrap-colorpicker/js/bootstrap-colorpicker-module.js"></script>
-
-  <script type="text/javascript" src="components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-
-  <link rel="stylesheet" href="components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.min.css"/>
-  <script type="text/javascript" src="components/seiyria-bootstrap-slider/dist/bootstrap-slider.min.js"></script>
-  <script type="text/javascript" src="components/angular-bootstrap-slider/slider.js"></script>
-
-  <link rel="stylesheet" href="app/styles/global.css"/>
 </head>
 <body ng-controller="MainCtrl">
 
