--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,8 +31,9 @@
   <script type="text/javascript" src="webjars/highcharts/4.2.1/highcharts.js"></script>
   <script type="text/javascript" src="webjars/highcharts-ng/0.0.11/dist/highcharts-ng.js"></script>
   <!-- Bootstrap colorpicker -->
-  <link rel="stylesheet" href="webjars/angular-bootstrap-colorpicker/3.0.11/css/colorpicker.css"/>
-  <script type="text/javascript" src="webjars/angular-bootstrap-colorpicker/3.0.11/js/bootstrap-colorpicker-module.js"></script>
+  <link rel="stylesheet" href="webjars/angularjs-color-picker/1.0.2/dist/angularjs-color-picker.min.css" />
+  <script src="webjars/tinycolor/1.3.0/dist/tinycolor-min.js"></script>
+  <script src="webjars/angularjs-color-picker/1.0.2/dist/angularjs-color-picker.min.js"></script>
   <!-- Bootstrap UI -->
   <script type="text/javascript" src="webjars/angular-ui-bootstrap-bower/0.14.3/ui-bootstrap-tpls.min.js"></script>
   <!-- Angular slider -->
