Display episodes from the past in a slightly different color

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -52,6 +52,7 @@
   <link rel="stylesheet" type="text/css" href="app/module/employee/styles/employee.css">
   <link rel="stylesheet" type="text/css" href="app/module/calendar/styles/calendar.css">
   <link rel="stylesheet" type="text/css" href="app/module/episode/styles/episode.css">
+  <link rel="stylesheet" type="text/css" href="app/module/capacity/styles/capacity.css">
 
   <!-- Directives and factories -->
   <script type="text/javascript" src="app/scripts/directive/labelGroup.js"></script>
