Add ability to add absences

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -62,6 +62,7 @@
   <!-- Modules -->
   <script type="text/javascript" src="app/module/home/controller/HomeController.js"></script>
   <script type="text/javascript" src="app/module/calendar/factory/HolidayFactory.js"></script>
+  <script type="text/javascript" src="app/module/calendar/factory/AbsenceFactory.js"></script>
   <script type="text/javascript" src="app/module/calendar/controller/CalendarController.js"></script>
   <script type="text/javascript" src="app/module/employee/factory/EmployeeFactory.js"></script>
   <script type="text/javascript" src="app/module/employee/controller/EmployeeListController.js"></script>
