--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -40,7 +40,8 @@
   <link rel="stylesheet" href="webjars/seiyria-bootstrap-slider/5.2.6/dist/css/bootstrap-slider.min.css"/>
   <script type="text/javascript" src="webjars/seiyria-bootstrap-slider/5.2.6/dist/bootstrap-slider.min.js"></script>
   <script type="text/javascript" src="webjars/angular-bootstrap-slider/0.1.24/slider.js"></script>
-
+  <!-- awesome-bootstrap-checkbox -->
+  <link rel="stylesheet" href="webjars/awesome-bootstrap-checkbox/0.3.7/awesome-bootstrap-checkbox.css"/>
   <!-- App basics -->
   <script type="text/javascript" src="app/scripts/app.js"></script>
   <script type="text/javascript" src="app/scripts/routes.js"></script>
