--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@
   <title>Capacity planning tools</title>
 
   <!-- jQuery -->
-  <script type="text/javascript" src="webjars/jquery/1.12.3/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="webjars/jquery/2.0.0/jquery.min.js"></script>
   <!-- bootstrap -->
   <script type="text/javascript" src="webjars/bootstrap/3.3.6/dist/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="webjars/bootstrap/3.3.6/dist/css/bootstrap.min.css">
