Split of controller into separate .js file

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -44,6 +44,7 @@
   <link rel="stylesheet" href="webjars/awesome-bootstrap-checkbox/0.3.7/awesome-bootstrap-checkbox.css"/>
   <!-- App basics -->
   <script type="text/javascript" src="app/scripts/app.js"></script>
+  <script type="text/javascript" src="app/scripts/main.js"></script>
   <script type="text/javascript" src="app/scripts/routes.js"></script>
 
   <!-- Styles -->
