--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,13 +17,13 @@
   <script type="text/javascript" src="webjars/angular-resource/1.5.5/angular-resource.js"></script>
   <script type="text/javascript" src="webjars/angular-route/1.5.5/angular-route.js"></script>
   <!-- Angular tags input -->
-  <script type="text/javascript" src="webjars/ng-tags-input/2.3.0/ng-tags-input.min.js"></script>
+  <script type="text/javascript" src="webjars/ng-tags-input/2.3.0/ng-tags-input.js"></script>
   <link rel="stylesheet" type="text/css" href="webjars/ng-tags-input/2.3.0/ng-tags-input.min.css">
   <!-- Shiro -->
   <script type="text/javascript" src="webjars/angular-shiro/0.1.3/dist/angular-shiro.min.js"></script>
   <!-- angular-calendar -->
   <link rel="stylesheet" href="webjars/fullcalendar/2.3.1/dist/fullcalendar.css"/>
-  <script type="text/javascript" src="webjars/moment/2.13.0/min/moment.min.js"></script>
+  <script type="text/javascript" src="webjars/moment/2.14.1/min/moment.min.js"></script>
   <script type="text/javascript" src="webjars/angular-ui-calendar/1.0.1/src/calendar.js"></script>
   <script type="text/javascript" src="webjars/fullcalendar/2.3.1/dist/fullcalendar.min.js"></script>
   <script type="text/javascript" src="webjars/fullcalendar/2.3.1/dist/gcal.js"></script>
@@ -79,7 +79,7 @@
   <script type="text/javascript" src="app/module/ical_import/factory/IcalImportFactory.js"></script>
 
 </head>
-<body ng-controller="MainCtrl">
+<body ng-controller="MainCtrl as main">
 
 <div id="wrapper">
 
@@ -109,14 +109,14 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li ng-class="{active : currentModule() == 'employees'}"><a href="#/employees"><i class="fa fa-users"></i> Employees <span class="sr-only">(current)</span></a></li>
-            <li ng-class="{active : currentModule() == 'episodes'}"><a href="#/episodes"><i class="fa fa-caret-square-o-right"></i> Episodes</a></li>
-            <li ng-class="{active : currentModule() == 'calendar'}"><a href="#/calendar"><i class="fa fa-calendar"></i> Calendar</a></li>
-            <li ng-class="{active : currentModule() == 'ical_imports'}"><a href="#/ical_imports"><i class="fa fa-calendar-plus-o"></i> iCal Imports</a></li>
+            <li ng-class="{active : main.currentModule() == 'employees'}"><a href="#/employees"><i class="fa fa-users"></i> Employees <span class="sr-only">(current)</span></a></li>
+            <li ng-class="{active : main.currentModule() == 'episodes'}"><a href="#/episodes"><i class="fa fa-caret-square-o-right"></i> Episodes</a></li>
+            <li ng-class="{active : main.currentModule() == 'calendar'}"><a href="#/calendar"><i class="fa fa-calendar"></i> Calendar</a></li>
+            <li ng-class="{active : main.currentModule() == 'ical_imports'}"><a href="#/ical_imports"><i class="fa fa-calendar-plus-o"></i> iCal Imports</a></li>
           </ul>
           <ul class="nav nav-sidebar">
-            <li ng-class="{active : currentModule() == 'capacity'}"><a href="#/capacity"><i class="fa fa-line-chart"></i> Capacity</a></li>
-            <li ng-class="{active : currentModule() == 'absence'}"><a href="#/absence"><i class="fa fa-pie-chart"></i> Absence</a></li>
+            <li ng-class="{active : main.currentModule() == 'capacity'}"><a href="#/capacity"><i class="fa fa-line-chart"></i> Capacity</a></li>
+            <li ng-class="{active : main.currentModule() == 'absence'}"><a href="#/absence"><i class="fa fa-pie-chart"></i> Absence</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" id="page-wrapper" ng-view>
