--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -78,6 +78,11 @@
   <script type="text/javascript" src="app/module/ical_import/controller/IcalImportDetailController.js"></script>
   <script type="text/javascript" src="app/module/ical_import/factory/IcalImportFactory.js"></script>
 
+  <script  type="text/javascript" src="app/module/role/role.factory.js"></script>
+  <script  type="text/javascript" src="app/module/role/role.controller.js"></script>
+  <script  type="text/javascript" src="app/module/role/roles.controller.js"></script>
+  <script  type="text/javascript" src="app/module/role/role.filter.js"></script>
+
 </head>
 <body ng-controller="MainCtrl as main">
 
@@ -117,6 +122,9 @@
           <ul class="nav nav-sidebar">
             <li ng-class="{active : main.currentModule() == 'capacity'}"><a href="#/capacity"><i class="fa fa-line-chart"></i> Capacity</a></li>
             <li ng-class="{active : main.currentModule() == 'absence'}"><a href="#/absence"><i class="fa fa-pie-chart"></i> Absence</a></li>
+          </ul>
+          <ul class="nav nav-sidebar">
+            <li ng-class="{active : main.currentModule() == 'roles'}"><a href="#/roles"><i class="fa fa-puzzle-piece"></i> Roles</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" id="page-wrapper" ng-view>
