--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -104,7 +104,7 @@
             <li><a href="#/">Home</a></li>
           </ul>
           <form class="navbar-form navbar-right">
-            <input type="text" class="form-control" placeholder="Search..." ng-model="$root.search" />
+            <input type="text" class="form-control" placeholder="Search..." ng-model="$root.search" id="site_search"/>
           </form>
         </div>
       </div>
