--- a/src/main/webapp/app/module/role/roles.html
+++ b/src/main/webapp/app/module/role/roles.html
@@ -10,7 +10,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr ng-repeat="role in vm.roles | filter: search | orderBy:predicate:reverse">
+    <tr ng-repeat="role in vm.roles | filter: search | orderBy:vm.predicate:vm.reverse">
         <td ng-bind="role.id"></td>
         <td><a href="#roles/{{role.id}}" ng-bind="role.name"></a></td>
         <td ng-repeat="permission in vm.permissions"><i class="fa fa-check" ng-if="vm.isSelected(permission, role)"></i></td>
