--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,7 +23,7 @@
   <script type="text/javascript" src="webjars/angular-shiro/0.1.3/dist/angular-shiro.min.js"></script>
   <!-- angular-calendar -->
   <link rel="stylesheet" href="webjars/fullcalendar/2.3.1/dist/fullcalendar.css"/>
-  <script type="text/javascript" src="webjars/moment/2.14.1/min/moment.min.js"></script>
+  <script type="text/javascript" src="webjars/moment/2.15.1/min/moment.min.js"></script>
   <script type="text/javascript" src="webjars/angular-ui-calendar/1.0.1/src/calendar.js"></script>
   <script type="text/javascript" src="webjars/fullcalendar/2.3.1/dist/fullcalendar.min.js"></script>
   <script type="text/javascript" src="webjars/fullcalendar/2.3.1/dist/gcal.js"></script>
@@ -37,8 +37,8 @@
   <!-- Bootstrap UI -->
   <script type="text/javascript" src="webjars/angular-ui-bootstrap-bower/1.3.3/ui-bootstrap-tpls.min.js"></script>
   <!-- Angular slider -->
-  <link rel="stylesheet" href="webjars/seiyria-bootstrap-slider/5.2.6/dist/css/bootstrap-slider.min.css"/>
-  <script type="text/javascript" src="webjars/seiyria-bootstrap-slider/5.2.6/dist/bootstrap-slider.min.js"></script>
+  <link rel="stylesheet" href="webjars/seiyria-bootstrap-slider/6.0.14/dist/css/bootstrap-slider.min.css"/>
+  <script type="text/javascript" src="webjars/seiyria-bootstrap-slider/6.0.14/dist/bootstrap-slider.min.js"></script>
   <script type="text/javascript" src="webjars/angular-bootstrap-slider/0.1.26/slider.js"></script>
   <!-- awesome-bootstrap-checkbox -->
   <link rel="stylesheet" href="webjars/awesome-bootstrap-checkbox/0.3.7/awesome-bootstrap-checkbox.css"/>
